discussion/kv_engine/179286/179286_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

Move the server interface class includes into a new directory

Change-Id: Id839ab6df2c61328a3a9d6915806f80f83695491

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-09-20 15:36:30.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-20 15:41:57.000000000
Message: 
Patch Set 13: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49517/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49517/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41620/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41620/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21869/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21869/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10217/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10217/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10217/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10315/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10315/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22855/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22855/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22484/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22484/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30883/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30883/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30883/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23639/ : ABORTED

Clang linker error: linker command failed due to signal (use -v to see invocation) ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23639/ )

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23639/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20507/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10: error: "memcached/thread_pool_config.h" file not found [clang-diagnostic-error]
#include <memcached/thread_pool_config.h>
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20507/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/server_iface/core.h:14:10:
error: "memcached/thread_pool_config.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20507/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19730/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
